MyProject/force-app/main/default/objects/Store__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <displayFormat>STR-{000}</displayFormat>
    <label>Store Code</label>
    <type>AutoNumber</type>
</CustomField>