MyProject/force-app/main/default/objects/Store__c/fields/Store_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_Status__c</fullName>
    <label>Store_Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>